<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="pw"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorOnSecondary">

        <TextView
            android:id="@+id/txt_second_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/kopubb"
            android:gravity="start"
            android:includeFontPadding="false"
            android:text="@string/first_set_pw_title"
            android:textColor="@color/mint_300_dark"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_first_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/kopubm"
            android:gravity="start"
            android:includeFontPadding="false"
            android:text="@string/first_set_pw_sub"
            android:textColor="@color/materialGray6"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_second_title" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            app:layout_constraintBottom_toTopOf="@id/btn_second_start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_second_title">

            <TextView
                android:id="@+id/txt_second_pw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:fontFamily="@font/kobpul"
                android:paddingVertical="8dp"
                android:paddingEnd="16dp"
                android:text="@string/first_set_pw_pw"
                android:textColor="@color/materialGray6"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/edt_second_pw"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/edt_second_pw" />

            <EditText
                android:id="@+id/edt_second_pw"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="36dp"
                android:background="@drawable/round_corner"
                android:fontFamily="@font/kopubm"
                android:hint="@string/first_set_pw_hint"
                android:inputType="numberPassword"
                android:maxLength="4"
                android:paddingHorizontal="16dp"
                android:paddingVertical="12dp"
                android:text="@={pw}"
                android:textColor="?attr/colorOnPrimary"
                android:textColorHint="@color/materialGray4"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txt_second_pw"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btn_second_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:layout_marginBottom="64dp"
            android:background="@drawable/round_box"
            android:backgroundTint="@color/mint_300"
            android:fontFamily="@font/kopubb"
            android:letterSpacing="0"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:stateListAnimator="@null"
            android:text="@string/first_set_pw_next"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>